--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack-dev-server": "^3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
